--- a/modules/admin/view/system/showadminlog.phtml
+++ b/modules/admin/view/system/showadminlog.phtml
@@ -24,7 +24,7 @@
                 <th class="head1">Kontroler</th>
                 <th class="head0">Akce</th>
                 <th class="head1">Stav</th>
-                <th class="head0">Stav</th>
+                <th class="head0">Referer</th>
                 <th class="head1">Parametry</th>
             </tr>
         </thead>
