--- a/modules/admin/view/menu.phtml
+++ b/modules/admin/view/menu.phtml
@@ -4,7 +4,6 @@
     <li><a href="/admin/action/" class="tables"><span>Akce</span></a></li>
     <li><a href="/admin/gallery/" class="media"><span>Galerie</span></a></li>
     <li><a href="/admin/content/" class="editor"><span>Obsah webu</span></a></li>
-    <li><a href="/admin/advertisement/" class="chat"><span>Bazar</span></a></li>
     {if $isSuperAdmin}
     <li><a href="/admin/partner/" class="grid"><span>Partneři</span></a></li>
     <li><a href="/admin/analytics/" class="charts"><span>Analytics</span></a></li>
@@ -26,7 +25,7 @@
     {/if}{elseif $isAdmin}
     <li><a href="/admin/partner/" class="grid"><span>Partneři</span></a></li>
     <li><a href="/admin/analytics/" class="charts"><span>Analytics</span></a></li>
-    <li><a href="/admin/email/" class="chat"><span>Poslat email</span></a></li>
+    <li><a href="/admin/email/send/" class="chat"><span>Poslat email</span></a></li>
     <li>
         <a href="/admin/user/" class="users menudrop"><span>Uživatelé</span></a>
         <ul>
